[gd_scene load_steps=24 format=3 uid="uid://cayxahy3xs3vh"]

[ext_resource type="Script" uid="uid://cbud5o66l1ggv" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://dpxocultda10a" path="res://CARPETADEIMAGENES/PersonajeVerdadero.PNG" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://bde075sbutbkg" path="res://CARPETADEIMAGENES/Fantozzi-SandL2.ogg" id="3_hqtel"]
[ext_resource type="AudioStream" uid="uid://beqa2qprejo8s" path="res://MUSICAYSONIDOS/Grito.mp3" id="4_2hs0m"]
[ext_resource type="AudioStream" uid="uid://b0jlsddjwmnij" path="res://MUSICAYSONIDOS/Fantozzi-footsteps/ogg/Fantozzi-SandL3.ogg" id="4_sweqy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hqtel"]
radius = 30.0167

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 48.0416

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]
bg_color = Color(0.412152, 0.412152, 0.412152, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3pqv"]
bg_color = Color(0.623529, 0.882353, 0.317647, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 38.0

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("2_onrkg")
region = Rect2(778, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_onrkg")
region = Rect2(389, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_onrkg")
region = Rect2(778, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_onrkg")
region = Rect2(1167, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_onrkg")
region = Rect2(1556, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_onrkg")
region = Rect2(1945, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_onrkg")
region = Rect2(2334, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_onrkg")
region = Rect2(2723, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_onrkg")
region = Rect2(3112, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_onrkg")
region = Rect2(3501, 0, 389, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_onrkg")
region = Rect2(3890, 0, 389, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_606se"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"scare",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("CircleShape2D_hqtel")

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_i3pqv")
debug_color = Color(0.635756, 0.409013, 0.853217, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -103.0
offset_top = -84.0
offset_right = 102.0
offset_bottom = -57.0
scale = Vector2(1, 0.64)
theme_override_styles/background = SubResource("StyleBoxFlat_hqtel")
theme_override_styles/fill = SubResource("StyleBoxFlat_i3pqv")
value = 100.0
show_percentage = false

[node name="PickUpArea" type="Area2D" parent="."]

[node name="areaderecogida" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -11)
scale = Vector2(0.17, 0.17)
sprite_frames = SubResource("SpriteFrames_606se")
animation = &"scare"

[node name="ScareTimer" type="Timer" parent="."]
wait_time = 9.0
autostart = true

[node name="SonidoPasos1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hqtel")
volume_db = -2.0

[node name="Grito" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2hs0m")

[node name="SonidoPasos2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sweqy")
volume_db = -2.0

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="area_entered" from="PickUpArea" to="." method="_on_pick_up_area_area_entered"]
[connection signal="timeout" from="ScareTimer" to="." method="_on_scare_timer_timeout"]
